--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,25 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
-          cache: "pip"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Set up Python
+        run: uv python install 3.12
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+        run: uv sync --all-extras --dev
 
       - name: Lint (Ruff)
-        run: ruff check .
+        run: uv run ruff check .
 
       - name: Format Check (Ruff)
-        run: ruff format --check .
+        run: uv run ruff format --check .
 
       - name: Type Check (Mypy)
-        run: mypy src/
+        run: uv run mypy src/
 
   test:
     name: Tests
@@ -38,17 +40,19 @@ jobs:
     needs: quality
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
-          cache: "pip"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Set up Python
+        run: uv python install 3.12
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+        run: uv sync --all-extras --dev
 
       - name: Run Tests with Coverage
         run: |
-          pytest --cov=foundermode --cov-report=xml
+          uv run pytest --cov=foundermode --cov-report=xml
