feat(tools): Implement Tavily Search tool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "tiktoken>=0.5.0", # Token counting
     "langchain-core>=1.2.5",
     "langsmith>=0.5.0",
+    "tavily-python>=0.7.17",
 ]
 
 [project.scripts]
