--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "langchain-core>=1.2.5",
     "langsmith>=0.5.0",
     "tavily-python>=0.7.17",
+    "python-dotenv>=1.2.1",
 ]
 
 [project.scripts]
