--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,22 @@ jobs:
       - name: Run Tests with Coverage
         run: |
           uv run pytest --cov=foundermode --cov-report=xml
+
+  docker:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: foundermode:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
