conductor(checkpoint): Checkpoint end of Track: DevOps: Docker & CI/CD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,5 @@ services:
       - .env
     volumes:
       - .:/app
+      - /app/.venv # Protect the container's venv from being overwritten by host mount
     command: run "Test Idea"
