fix(ci): Disable mypy warn_unused_ignores to resolve environment conflicts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ pythonpath = ["src"]
 python_version = "3.12"
 strict = true
 ignore_missing_imports = true
+warn_unused_ignores = false
 plugins = ["pydantic.mypy"]
 
 [tool.coverage.run]
