--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,4 +19,4 @@ repos:
     rev: v1.9.0
     hooks:
       - id: mypy
-        additional_dependencies: [pydantic>=2.0]
+        additional_dependencies: [pydantic>=2.0, pydantic-settings]
