--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      args:
+        - INCLUDE_DEV=true
+    platform: linux/amd64
     env_file:
       - .env
     volumes:
       - .:/app
-      - /app/.venv # Protect the container's venv from being overwritten by host mount
-    command: run "Test Idea"
+      # Exclude the local venv so we don't mix Linux (container) and Mac (host) binaries
+      - /app/.venv
+    # Keep the container alive for debugging, or run the server
+    command: api
+    ports:
+      - "8000:8000"
