--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,19 +34,6 @@ dependencies = [
 [project.scripts]
 foundermode = "foundermode.api.cli:app"
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-cov>=4.1.0",
-    "pytest-xdist>=3.5.0",  # Parallel test execution
-    "pytest-testmon>=2.1.0",  # Run only affected tests
-    "ruff>=0.3.0",
-    "mypy>=1.9.0",
-    "pre-commit>=3.6.0",
-    "types-beautifulsoup4",
-]
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -103,5 +90,17 @@ omit = ["tests/*"]
 
 [dependency-groups]
 dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=4.1.0",
+    "pytest-xdist>=3.5.0",  # Parallel test execution
+    "pytest-testmon>=2.1.0",  # Run only affected tests
+    "ruff>=0.3.0",
+    "mypy>=1.9.0",
+    "pre-commit>=3.6.0",
+    "types-beautifulsoup4",
     "respx>=0.22.0",
 ]
+
+[tool.uv.workspace]
+members = ["libs/*", "apps/*"]
