refactor: Move source code to apps/founder-mode

--- a/apps/founder-mode/pyproject.toml
+++ b/apps/founder-mode/pyproject.toml
@@ -17,3 +17,6 @@ packages = ["src/foundermode"]
 
 [tool.uv.sources]
 agentkit = { workspace = true }
+
+[project.scripts]
+foundermode = "foundermode.api.cli:app"
