--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,17 +31,12 @@ dependencies = [
     "playwright>=1.42.0",
 ]
 
-[project.scripts]
-foundermode = "foundermode.api.cli:app"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/foundermode"]
+[tool.uv]
+package = false
 
 # --- Tool Configuration ---
+
+
 
 [tool.ruff]
 line-length = 120
@@ -100,7 +95,13 @@ dev = [
     "pre-commit>=3.6.0",
     "types-beautifulsoup4",
     "respx>=0.22.0",
+    "founder-mode",
+    "agentkit",
 ]
 
 [tool.uv.workspace]
 members = ["libs/*", "apps/*"]
+
+[tool.uv.sources]
+founder-mode = { workspace = true }
+agentkit = { workspace = true }
