refactor: Move tests to apps/founder-mode and fix agentkit structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,7 @@ known-first-party = ["foundermode"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-testpaths = ["tests"]
-pythonpath = ["src"]
+testpaths = ["libs", "apps"]
 addopts = "-v --tb=short"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
