--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: uv run ruff format --check .
 
       - name: Type Check (Mypy)
-        run: uv run mypy src/
+        run: uv run mypy libs/ apps/
 
   test-fast:
     name: Fast Tests
@@ -82,7 +82,7 @@ jobs:
         env:
           OPENAI_API_KEY: sk-dummy-key-for-tests
         run: |
-          uv run pytest -n auto --cov=foundermode --cov-report=xml --cov-report=term-missing
+          uv run pytest -n auto --cov=libs --cov=apps --cov-report=xml --cov-report=term-missing
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4
